# ARMecha-Firmware

./: .gitignore  Cargo.toml  README.md  build.rs
keyboards/glorious/GMMK_TKL_ISO/: config.toml
keyboards/handwired/BMMP/: Config.toml  build.rs  build_kb.rs  config.toml
source/core/: action.rs  config_structs.rs  debounce.rs  hid.rs  key_code.rs  keyboard.rs  layout.rs  lib.rs  main.rs  matrix.rs
src/: build.rs  config_structs.rs  main.rs
src/core/: config_structs.rs  main.rs
